# RAG

./: .gitignore  CLAUDE.md  README.md
.cursor/notes/: decisions-log.md
.cursor/rules/: design-system.md  rtl-and-language.md
.kiro/specs/ai-recipe-import/: requirements.md  tasks.md
.kiro/steering/: product.md  sensitive-areas.md  structure.md  tech.md
rag/: README.md  app.py  extract.py  prepare.py  pyproject.toml
rag/docs/: workflow-diagram.html
rag/ragapp/: __init__.py  config.py  corpus.py  extraction.py  llm_utils.py  models.py  schema.py  structured_store.py  workflow.py
rag/tests/: conftest.py  test_corpus.py  test_extraction_helpers.py  test_llm_utils.py  test_structured_store.py  test_workflow.py
