[project]
name = "agentic-docs-rag"
version = "0.1.0"
description = "RAG over the markdown docs that agentic coding tools (Claude Code, Cursor, Kiro, Firebase Studio) keep in this repo"
requires-python = ">=3.10"
dependencies = [
    "llama-index-core>=0.14,<0.15",
    "llama-index-embeddings-cohere>=0.8,<0.9",
    "llama-index-llms-cohere>=0.8,<0.9",
    "llama-index-vector-stores-pinecone>=0.8,<0.9",
    "pinecone>=7,<8",
    "gradio>=5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.setuptools]
packages = ["ragapp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
